crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__multiple_syntax_errors_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: 
                func bad1( { }
                func good() { return 1; }
                struct bad2 x: felt }
                struct Good { x: felt }
            
result: [03] Error: found '{' expected identifier, or ')'
   ╭─[ <unknown>:2:28 ]
   │
 2 │                 func bad1( { }
   │                            ┬  
   │                            ╰── found '{' expected identifier, or ')'
───╯
