crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__namespace_namespace_with_function.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: namespace Utils { func helper() -> felt { return 1; } }
result: [
    Namespace(
        Namespace {
            name: "Utils",
            body: [
                Function(
                    FunctionDef {
                        name: "helper",
                        params: [],
                        return_type: Some(
                            Named(
                                "felt",
                            ),
                        ),
                        body: [
                            Return {
                                value: Some(
                                    Literal(
                                        1,
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ],
        },
    ),
]
