crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__namespace_nested_namespace.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: namespace Outer { namespace Inner { const VALUE = 42; } }
result: [
    Namespace(
        Namespace {
            name: "Outer",
            body: [
                Namespace(
                    Namespace {
                        name: "Inner",
                        body: [
                            Const(
                                ConstDef {
                                    name: "VALUE",
                                    value: Literal(
                                        42,
                                    ),
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
]
