crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__namespace_simple_namespace.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: namespace Math { const PI = 314; }
result: [
    Namespace(
        Namespace {
            name: "Math",
            body: [
                Const(
                    ConstDef {
                        name: "PI",
                        value: Literal(
                            314,
                        ),
                    },
                ),
            ],
        },
    ),
]
