crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__simple_let_error.snap
---
source: crates/compiler/parser/src/parser.rs
expression: err
---
[03] Error: found 'x' expected end of input
   ╭─[ <unknown>:1:5 ]
   │
 1 │ let x = 3;
   │     ┬  
   │     ╰── found 'x' expected end of input
───╯
