crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_const_statement.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { const PI = 314; }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [],
            return_type: None,
            body: [
                Const(
                    ConstDef {
                        name: "PI",
                        value: Literal(
                            314,
                        ),
                    },
                ),
            ],
        },
    ),
]
