crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_index_assignment.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { arr[0] = item; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Assignment {
                            lhs: Spanned(
                                IndexAccess {
                                    array: Spanned(
                                        Identifier(
                                            Spanned(
                                                "arr",
                                                14..17,
                                            ),
                                        ),
                                        14..17,
                                    ),
                                    index: Spanned(
                                        Literal(
                                            0,
                                        ),
                                        18..19,
                                    ),
                                },
                                14..17,
                            ),
                            rhs: Spanned(
                                Identifier(
                                    Spanned(
                                        "item",
                                        23..27,
                                    ),
                                ),
                                23..27,
                            ),
                        },
                        14..28,
                    ),
                ],
            },
            0..30,
        ),
    ),
]
