crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_let_with_expression.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { let result = a + b * c; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            name: Spanned(
                                "result",
                                18..24,
                            ),
                            value: Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                27..28,
                                            ),
                                        ),
                                        27..28,
                                    ),
                                    right: Spanned(
                                        BinaryOp {
                                            op: Mul,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "b",
                                                        31..32,
                                                    ),
                                                ),
                                                31..32,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "c",
                                                        35..36,
                                                    ),
                                                ),
                                                35..36,
                                            ),
                                        },
                                        31..32,
                                    ),
                                },
                                27..28,
                            ),
                        },
                        14..37,
                    ),
                ],
            },
            0..39,
        ),
    ),
]
