crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_local_with_type.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { local x: felt = 42; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Local {
                            name: Spanned(
                                "x",
                                20..21,
                            ),
                            ty: Some(
                                Named(
                                    "felt",
                                ),
                            ),
                            value: Spanned(
                                Literal(
                                    42,
                                ),
                                30..32,
                            ),
                        },
                        14..33,
                    ),
                ],
            },
            0..35,
        ),
    ),
]
