crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__statement_local_without_type.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { local x = infer_me; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Local {
                            name: Spanned(
                                "x",
                                20..21,
                            ),
                            ty: None,
                            value: Spanned(
                                Identifier(
                                    Spanned(
                                        "infer_me",
                                        24..32,
                                    ),
                                ),
                                24..32,
                            ),
                        },
                        14..33,
                    ),
                ],
            },
            0..35,
        ),
    ),
]
